@@ -7,8 +7,6 @@ import io.github.bigbird0101.code.exception.TemplateResolveException;
 import java.util.List;
 import java.util.Map;
 
-import static java.util.stream.Collectors.toList;
-
 /**
  * 简单的模板解析器
  * 模板中只包含 简单的 *{}* 和 tool 语法 和 depend语法 不包含其他的 语法
@@ -21,7 +19,7 @@ public class SimpleAbstractTemplateResolver extends DefaultAbstractTemplateResol
     protected String doResolver(String srcData, Map<String, Object> replaceKeyValue) throws TemplateResolveException {
         String tempResult=srcData;
         final List<TemplateLangResolver> templateLangResolverList = getTemplateLangResolverList()
-                .stream().filter(s->((s instanceof ToolTemplateLangResolver)||s instanceof DependTemplateLangResolver)).collect(toList());
+                .stream().filter(s -> ((s instanceof ToolTemplateLangResolver) || s instanceof DependTemplateLangResolver)).toList();
         for (TemplateLangResolver resolver: templateLangResolverList){
             if(resolver.matchLangResolver(tempResult)){
                 tempResult= resolver.langResolver(tempResult, replaceKeyValue);
